✨ feat: Generate topic names based on first message

--- a/locales/ar/setting.json
+++ b/locales/ar/setting.json
@@ -308,6 +308,10 @@
       "desc": "هل يجب إنشاء موضوع تلقائيًا أثناء الدردشة، يسري ذلك فقط في المواضيع المؤقتة",
       "title": "تمكين إنشاء الموضوع تلقائيًا"
     },
+    "enableIntelligentTopicName": {
+      "desc": "ما إذا كان سيتم إنشاء اسم موضوع بناءً على الرسالة الأولى من المحادثة باستخدام النموذج المحدد حاليًا",
+      "title": "اسم الموضوع الذكي"
+    },
     "enableCompressThreshold": {
       "title": "هل تريد تمكين عتبة ضغط طول الرسائل التاريخية"
     },
