--- a/locales/bg-BG/setting.json
+++ b/locales/bg-BG/setting.json
@@ -292,6 +292,10 @@
       "desc": "Дали да се създава автоматично тема по време на разговора, ефективно само във временни теми",
       "title": "Автоматично създаване на тема"
     },
+    "enableIntelligentTopicName": {
+      "desc": "Дали да се генерира име на тема въз основа на първото съобщение от разговора, използвайки текущо избрания модел",
+      "title": "Интелигентно име на тема"
+    },
     "enableCompressThreshold": {
       "title": "Активиране на прага на компресия на дължината на съобщенията в историята"
     },
