--- a/locales/ja-JP/setting.json
+++ b/locales/ja-JP/setting.json
@@ -308,6 +308,10 @@
       "desc": "会話中に自動的にトピックを作成するかどうか。一時的なトピックのみ有効です",
       "title": "自動的にトピックを作成する"
     },
+    "enableIntelligentTopicName": {
+      "desc": "現在選択されているモデルを使用して、会話の最初のメッセージに基づいてトピック名を生成するかどうか",
+      "title": "インテリジェントなトピック名"
+    },
     "enableCompressThreshold": {
       "title": "過去メッセージの長さの圧縮閾値を有効にする"
     },
