--- a/locales/ko-KR/setting.json
+++ b/locales/ko-KR/setting.json
@@ -308,6 +308,10 @@
       "desc": "대화 중에 자동으로 주제를 만들지 여부를 설정합니다. 일시적인 주제에서만 작동합니다",
       "title": "자동 주제 생성 활성화"
     },
+    "enableIntelligentTopicName": {
+      "desc": "현재 선택된 모델을 사용하여 대화의 첫 번째 메시지를 기반으로 주제 이름을 생성할지 여부",
+      "title": "지능형 주제 이름"
+    },
     "enableCompressThreshold": {
       "title": "이전 메시지 길이 압축 임계값 활성화"
     },
