--- a/locales/ru-RU/setting.json
+++ b/locales/ru-RU/setting.json
@@ -308,6 +308,10 @@
       "desc": "Автоматическое создание темы во время беседы, работает только во временных темах",
       "title": "Автоматическое создание темы"
     },
+    "enableIntelligentTopicName": {
+      "desc": "Следует ли генерировать название темы на основе первого сообщения беседы, используя выбранную в данный момент модель",
+      "title": "Интеллектуальное название темы"
+    },
     "enableCompressThreshold": {
       "title": "Включить сжатие истории сообщений"
     },
