--- a/locales/bg-BG/error.json
+++ b/locales/bg-BG/error.json
@@ -92,7 +92,7 @@
       },
       "Bedrock": {
         "customRegion": "Персонализиран регион на услугата",
-        "description": "Въведете вашия Aws AccessKeyId / SecretAccessKey, за да стартирате сесията. Приложението няма да съхранява вашата конфигурация за удостоверяване.",
+        "description": "Въведете вашия AWS AccessKeyId / SecretAccessKey, за да стартирате сесията. Приложението няма да съхранява вашата конфигурация за удостоверяване.",
         "title": "Използвайте персонализирана информация за удостоверяване на Bedrock"
       },
       "Google": {
