--- a/locales/fr-FR/setting.json
+++ b/locales/fr-FR/setting.json
@@ -86,22 +86,22 @@
     },
     "bedrock": {
       "accessKeyId": {
-        "desc": "Entrez l'Aws Access Key Id",
-        "placeholder": "Aws Access Key Id",
-        "title": "Aws Access Key Id"
+        "desc": "Entrez l'AWS Access Key Id",
+        "placeholder": "AWS Access Key Id",
+        "title": "AWS Access Key Id"
       },
       "checker": {
         "desc": "Testez si l'AccessKeyId / SecretAccessKey est bien renseigné"
       },
       "region": {
-        "desc": "Entrez la région Aws",
-        "placeholder": "Région Aws",
-        "title": "Région Aws"
+        "desc": "Entrez la région AWS",
+        "placeholder": "Région AWS",
+        "title": "Région AWS"
       },
       "secretAccessKey": {
-        "desc": "Entrez l'Aws Secret Access Key",
-        "placeholder": "Aws Secret Access Key",
-        "title": "Aws Secret Access Key"
+        "desc": "Entrez l'AWS Secret Access Key",
+        "placeholder": "AWS Secret Access Key",
+        "title": "AWS Secret Access Key"
       },
       "title": "Bedrock"
     },
