--- a/locales/ru-RU/error.json
+++ b/locales/ru-RU/error.json
@@ -92,7 +92,7 @@
       },
       "Bedrock": {
         "customRegion": "Пользовательская область услуг",
-        "description": "Введите свой ключ доступа Aws AccessKeyId / SecretAccessKey, чтобы начать сеанс. Приложение не будет сохранять вашу аутентификационную конфигурацию",
+        "description": "Введите свой ключ доступа AWS AccessKeyId / SecretAccessKey, чтобы начать сеанс. Приложение не будет сохранять вашу аутентификационную конфигурацию",
         "title": "Использовать пользовательскую информацию об аутентификации Bedrock"
       },
       "Google": {
