--- a/locales/bg-BG/common.json
+++ b/locales/bg-BG/common.json
@@ -108,7 +108,7 @@
     "openai": "OpenAI",
     "openrouter": "OpenRouter",
     "perplexity": "Perplexity",
-    "togetherai": "ЗаедноAI",
+    "togetherai": "Together AI",
     "zeroone": "01-AI",
     "zhipu": "Zhipu AI"
   },
