--- a/locales/es-ES/setting.json
+++ b/locales/es-ES/setting.json
@@ -72,22 +72,22 @@
     },
     "bedrock": {
       "accessKeyId": {
-        "desc": "Introduce tu Aws Access Key Id",
-        "placeholder": "Aws Access Key Id",
-        "title": "Aws Access Key Id"
+        "desc": "Introduce tu AWS Access Key Id",
+        "placeholder": "AWS Access Key Id",
+        "title": "AWS Access Key Id"
       },
       "checker": {
         "desc": "Prueba si el AccessKeyId / SecretAccessKey se ha introducido correctamente"
       },
       "region": {
-        "desc": "Introduce tu región de Aws",
-        "placeholder": "Región de Aws",
-        "title": "Región de Aws"
+        "desc": "Introduce tu región de AWS",
+        "placeholder": "Región de AWS",
+        "title": "Región de AWS"
       },
       "secretAccessKey": {
-        "desc": "Introduce tu Aws Secret Access Key",
-        "placeholder": "Aws Secret Access Key",
-        "title": "Aws Secret Access Key"
+        "desc": "Introduce tu AWS Secret Access Key",
+        "placeholder": "AWS Secret Access Key",
+        "title": "AWS Secret Access Key"
       },
       "title": "Bedrock"
     },
