--- a/locales/it-IT/error.json
+++ b/locales/it-IT/error.json
@@ -92,7 +92,7 @@
       },
       "Bedrock": {
         "customRegion": "Regione del servizio personalizzata",
-        "description": "Inserisci il tuo Aws AccessKeyId / SecretAccessKey per iniziare la sessione. L'applicazione non memorizzerà la tua configurazione di autenticazione",
+        "description": "Inserisci il tuo AWS AccessKeyId / SecretAccessKey per iniziare la sessione. L'applicazione non memorizzerà la tua configurazione di autenticazione",
         "title": "Utilizza le informazioni di autenticazione personalizzate di Bedrock"
       },
       "Google": {
