--- a/locales/zh-CN/error.json
+++ b/locales/zh-CN/error.json
@@ -92,7 +92,7 @@
       },
       "Bedrock": {
         "customRegion": "自定义服务区域",
-        "description": "输入你的 Aws AccessKeyId / SecretAccessKey 即可开始会话。应用不会记录你的鉴权配置",
+        "description": "输入你的 AWS AccessKeyId / SecretAccessKey 即可开始会话。应用不会记录你的鉴权配置",
         "title": "使用自定义 Bedrock 鉴权信息"
       },
       "Google": {
